// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expect <Button> to render properly without option 1`] = `
<div
  className="gds-tag custom-class gds-tag--primary gds-tag--sm"
  onClick={[MockFunction]}
  style={
    {
      "wdith": "100%",
    }
  }
>
  Cool Tagz
</div>
`;

exports[`Expect <Tag> to render properly 1`] = `
<div
  className="gds-tag custom-class gds-tag--primary gds-tag--with-button gds-tag--with-button--sm gds-tag--sm"
  onClick={[MockFunction]}
  style={
    {
      "wdith": "100%",
    }
  }
>
  Cool Tagz
  <button
    aria-label="Remove me"
    className="gds-tag__option gds-tag__option--primary gds-tag__option--sm"
    onClick={[MockFunction]}
  >
    <i
      className="btl bt-fw bt-times"
    />
  </button>
</div>
`;
